--- a/config.h.in
+++ b/config.h.in
@@ -52,6 +52,10 @@
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
 
+/* Define if your processor stores words with the most significant
+   byte first (like Motorola and SPARC, unlike Intel and VAX).  */
+#undef WORDS_BIGENDIAN
+
 /* Define the pathname of default index directory */
 #undef OPT_INDEXDIR
 
