--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.39 1999-10-24 18:29:45 kenzo- Exp $
+dnl $Id: configure.in,v 1.40 1999-11-01 07:03:14 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -12,7 +12,7 @@ dnl
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/cgi.c)
 AC_PREREQ(2.13)               dnl Minimum Autoconf version required.
-AM_INIT_AUTOMAKE(namazu, 1.9.6)
+AM_INIT_AUTOMAKE(namazu, 1.9.7)
 
 dnl Namazu's website
 OPT_NMZ_URI="http://openlab.ring.gr.jp/namazu/"
