--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.40 1999-11-01 07:03:14 satoru Exp $
+dnl $Id: configure.in,v 1.41 1999-11-01 07:23:54 knok Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -13,6 +13,9 @@ dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/cgi.c)
 AC_PREREQ(2.13)               dnl Minimum Autoconf version required.
 AM_INIT_AUTOMAKE(namazu, 1.9.7)
+
+dnl libtool
+AM_PROG_LIBTOOL
 
 dnl Namazu's website
 OPT_NMZ_URI="http://openlab.ring.gr.jp/namazu/"
@@ -419,6 +422,7 @@ AC_OUTPUT([Makefile
 	   filter/Makefile
 	   intl/Makefile 
 	   lib/Makefile
+	   nmz/Makefile
 	   lisp/Makefile
 	   pl/Makefile
 	   pl/var.pl
