--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -18,7 +18,7 @@ CLEANFILES  = gcnmz mknmz kwnmz
 localedir = $(datadir)/locale
 INCLUDES  = -I.. -I../intl -I../lib -I../nmz
 DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
-LDADD = @INTLLIBS@ ../lib/libnmzut.a ../nmz/.libs/libnmz.a
+LDADD = @INTLLIBS@ ../lib/libnmzut.a $(top_srcdir)/nmz/libnmz.la
 
 confdir     = $(sysconfdir)/$(PACKAGE)
 perllibdir  = $(pkgdatadir)/pl
