--- a/tknamazu/Makefile.am
+++ b/tknamazu/Makefile.am
@@ -11,15 +11,13 @@ ext_mknmz=@MKNMZ@
 bin_SCRIPTS = tknamazu
 pkgdata_DATA = tknamazu.hlp.en tknamazu.hlp.ja \
 	tknamazu_icon.ppm tknamazu_logo.ppm mini-tknamazu.xpm mini-tknamazu.ico \
-	tknmzrc
+	tknamazurc
 
 CLEANFILES = tknamazu
 
 EXTRA_DIST = $(pkgdata_DATA) tknamazu.spec.in tknamazu.spec
 
 tknamazu: tknamazu.tcl
-	sed -e 's!%NAMAZU%!$(ext_namazu)!g' \
-	    -e 's!%MKNMZ%!$(ext_mknmz)!g' \
-	    -e 's!%PKGDATADIR%!$(pkgdatadir)!g' \
+	sed -e 's!%PKGDATADIR%!$(pkgdatadir)!g' \
 	tknamazu.tcl > $@
 	chmod +x $@
