--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.50 1999-11-02 23:07:10 satoru Exp $
+dnl $Id: configure.in,v 1.51 1999-11-03 04:39:07 satoru Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -83,216 +83,9 @@ if test $ac_cv_func_vsnprintf = no && test $ac_cv_func__vsnprintf = no; then
     LIBOBJS="$LIBOBJS vsnprintf.${ac_objext}"
 fi
 
-dnl *
-dnl * Check for Emacs and where to install .elc files.
-dnl *
-AM_PATH_LISPDIR
 
 dnl *
-dnl * Checks for external commands
-dnl *
-
-AC_ARG_WITH(
-	perl5,
-	[  --with-perl5=PATH       set perl 5.004 or later location [search path]],
-	AC_MSG_RESULT(using $with_perl5 for perl5)
-	PERL=$with_perl5,
-	[AC_PATH_PROGS(PERL, perl5 perl, no)]
-)
-if test $PERL = "no" || $PERL -e 'exit ($] >= 5.004)'; then
-    AC_MSG_ERROR(perl 5.004 or later required)
-fi
-
-AC_ARG_WITH(
-	japanese,
-	[  --without-japanese      do not handle Japanese characters],
-	[japanese=${withval}], [japanese='yes']
-)
-
-if test "${japanese}" = "no"; then
-    # --without-japanese
-    OPT_LANGUAGE=en
-    AC_SUBST(OPT_LANGUAGE)
-    OPT_WAKATI_DEFAULT="none"
-else
-    OPT_LANGUAGE=ja
-    AC_ARG_WITH(
-	    lang,
-	    [  --with-lang=language    set default LANGUAGE code [ja]],
-	    OPT_LANGUAGE=$with_lang,
-    )
-    AC_SUBST(OPT_LANGUAGE)
-
-    AC_ARG_WITH(
-	    nkf,
-	    [  --with-nkf=PATH         set nkf command location [search path]],
-	    NKF=$with_nkf
-	    AC_MSG_RESULT(using $with_nkf for nkf),
-	    if test -z "$NKF"; then
-		AC_MSG_CHECKING(for NKF module)
-		if $PERL -MNKF -e '' 1>/dev/null 2> /dev/null; then
-		    NKF=module_nkf
-		    AC_MSG_RESULT(yes)
-		else
-		    AC_MSG_RESULT(no)
-		    [AC_PATH_PROG(NKF,nkf, no)] 
-		fi
-	    fi
-    )
-    if test "$NKF" = "no"; then
-	AC_MSG_ERROR(NKF (network kanji filter) not found)
-    fi
-
-    AC_ARG_WITH(
-	    kakasi,
-	    [  --with-kakasi=PATH      set kakasi command location [search path]],
-	    KAKASI=$with_kakasi
-	    AC_MSG_RESULT(using $with_kakasi for kakasi),
-	    if test -z "$KAKASI"; then
-		AC_MSG_CHECKING(for Text::Kakasi module)
-		if $PERL -MText::Kakasi -e '' 1>/dev/null 2> /dev/null; then
-		    KAKASI=module_kakasi
-		    AC_MSG_RESULT(yes)
-		else
-		    AC_MSG_RESULT(no)
-		    [AC_PATH_PROG(KAKASI,kakasi, no)] 
-		fi
-	    fi
-    )
-    AC_ARG_WITH(
-	    chasen,
-	    [  --with-chasen=PATH      set chasen command location [search path]],
-	    CHASEN=$with_chasen
-	    AC_MSG_RESULT(using $with_chasen for chasen),
-	    if test -z "$CHASEN"; then
-		AC_MSG_CHECKING(for Text::ChaSen1 module)
-		if $PERL -MText::ChaSen1 -e '' 1>/dev/null 2> /dev/null; then
-		    CHASEN=module_chasen1
-		    AC_MSG_RESULT(yes)
-		else
-		    AC_MSG_RESULT(no)
-		    [AC_PATH_PROG(CHASEN,chasen, no)] 
-		fi
-	    fi
-    )
-    if test "$KAKASI" = "no" -a "$CHASEN" = "no"; then
-	AC_MSG_ERROR(KAKASI or ChaSen are required to handle a Japanese text)
-    fi
-
-    AC_MSG_CHECKING(for default wakatigaki processor)
-    OPT_WAKATI_DEFAULT=
-    if test "$KAKASI" != "no"; then
-	OPT_WAKATI_DEFAULT=KAKASI
-    elif test "$CHASEN" != "no"; then
-	OPT_WAKATI_DEFAULT=CHASEN
-    fi
-    AC_MSG_RESULT($OPT_WAKATI_DEFAULT)
-fi
-AC_SUBST(OPT_WAKATI_DEFAULT)
-
-
-dnl *
-dnl * Checking tknamazu
-dnl *
-
-dnl * For determining namazu and mknmz pathnames
-ac_cv_path_NAMAZU="$bindir/namazu"
-ac_cv_path_MKNMZ="$bindir/mknmz"
-
-AC_ARG_WITH(
-	tknamazu,
-	[  --without-tknamazu      do not build namazu with tcl/tk front-end ],
-	[tknamazu=${withval}], [tknamazu='yes']
-)
-
-if test "${tknamazu}" = "no"; then
-    TKNAMAZU=""
-else
-    AC_ARG_WITH(
-		wish,
-		[  --with-wish=PATH        set wish location [search path]],
-		AC_MSG_RESULT(using $with_wish for wish)
-		WISH = $with_wish,
-		dnl checking for wish (ugly)
-		[AC_PATH_PROGS(WISH, wish8.0jp wish4.2jp wish8.2 wish8.1 wish, no)]
-    )
-    if test "$WISH" = "no"; then
-        AC_MSG_WARN(*** wish not found: tknamazu will not be built because ***)
-        TKNAMAZU=""
-    else
-        AC_ARG_WITH(
-			lynx,
-			[  --with-lynx=PATH        set lynx browser location [search path]],
-			AC_MSG_RESULT(using $with_lynx for lynx)
-			LYNX = $with_lynx,
-			[AC_PATH_PROG(LYNX, lynx, no)]
-        )
-        if test "$LYNX" = "no"; then
-            AC_MSG_WARN(*** lynx not found: tknamazu will not be built ***)
-            TKNAMAZU=""
-        else
-            TKNAMAZU="tknamazu"
-            AC_ARG_WITH(
-				groff,
-				[  --with-groff=PATH       set groff location [search path]],
-				AC_MSG_RESULT(using $with_groff for groff)
-				GROFF = $with_groff,
-				[AC_PATH_PROGS(GROFF, jgroff groff nroff, no)]
-            )
-            if test "$GROFF" = "no"; then
-                AC_MSG_WARN(*** groff not found: tknamazu cannot browse man pages ***)
-            fi
-            AC_ARG_WITH(
-				info,
-				[  --with-info=PATH        set info location [search path]],
-				AC_MSG_RESULT(using $with_info for info)
-				INFO = $with_info,
-				[AC_PATH_PROG(INFO, info, no)]
-            )
-            if test "$INFO" = "no"; then
-                AC_MSG_WARN(*** info not found: tknamazu cannot browse info files ***)
-            fi
-            AC_ARG_WITH(
-				zcat,
-				[  --with-zcat=PATH        set zcat location [search path]],
-				AC_MSG_RESULT(using $with_zcat for zcat)
-				ZCAT = $with_zcat,
-				[AC_PATH_PROG(ZCAT, zcat, no)]
-            )
-            if test "$ZCAT" = "no"; then
-                AC_MSG_WARN(zcat not found)
-            fi
-            AC_ARG_WITH(
-				netscape,
-				[  --with-netscape=PATH    set netscape location [search path]],
-				AC_MSG_RESULT(using $with_netscape for netscape)
-				NETSCAPE = $with_netscape,
-				[AC_PATH_PROG(NETSCAPE, netscape, no)]
-            )
-            if test "$NETSCAPE" = "no"; then
-            AC_MSG_WARN(netscape not found)
-            fi
-        fi
-    fi
-fi
-AC_SUBST(TKNAMAZU)
-AC_CONFIG_SUBDIRS($TKNAMAZU)
-
-
-dnl *
-dnl * Set a directory to install perl modules
-dnl *
-ADDITIONAL_INC="."  # default (dummy)
-AC_ARG_WITH(
-	pmdir,
-	[  --with-pmdir=DIR        perl modules are in DIR [guessed]],
-	[PMDIR=${withval}], [PMDIR='']
-)
-test "$PMDIR" && ADDITIONAL_INC="$PMDIR"
-AC_SUBST(ADDITIONAL_INC)
-
-dnl *
-dnl * Check File::MMagic module
+dnl * Check File::MMagic module wheter to be build or not.
 dnl *
 AC_ARG_WITH(
     file-mmagic,
@@ -300,40 +93,14 @@ AC_ARG_WITH(
     [file_mmagic=${withval}], [file_mmagic='yes']
 )
 
-if test "${file_mmagic}" = "no"; then
-    FILE_MMAGIC=""
-else
-    changequote(<<, >>)
-    tmp=`$PERL -nle 'print \$1 if /^\\$VERSION = \"([\d\.]+)\";\$/' \
-    	File-MMagic/MMagic.pm`
-    # tmp="10.0"  # for testing
-    AC_MSG_CHECKING(for File::MMagic module)
-
-    FILE_MMAGIC=""
-    if $PERL -e "use lib '$PMDIR'; use File::MMagic $tmp" \
-    1>/dev/null 2> /dev/null; then
-        AC_MSG_RESULT(yes)
-    else
-        AC_MSG_RESULT(no)
-        AC_MSG_WARN(File::MMagic module not installed. preparing its Makefile.)
-        cd File-MMagic
-        if test -z "$PMDIR"; then
-            $PERL Makefile.PL
-        else
-            $PERL Makefile.PL LIB=$PMDIR
-        fi
-
-	# To prevent to remove Makefile when doing 'make clean'
-	grep -v '^	-mv Makefile Makefile\.old \$(DEV_NULL)' \
-	Makefile > Makefile.tmp
-	mv Makefile.tmp Makefile
-
-        cd ..
-        FILE_MMAGIC="File-MMagic"
-    fi
-    changequote([, ])
-fi
-AC_SUBST(FILE_MMAGIC)
+dnl *
+dnl * Check tknamazu wheter to be build or not.
+dnl *
+AC_ARG_WITH(
+    tknamazu,
+    [  --without-tknamazu      do not build namazu with tcl/tk front-end ],
+    [tknamazu=${withval}], [tknamazu='yes']
+)
 
 dnl *
 dnl * Define the admin's email address
@@ -389,9 +156,9 @@ changequote([, ])
 webmaster="webmaster@${hostname}${domainname}"
 AC_MSG_CHECKING(for admin's email address)
 AC_ARG_WITH(
-	admin,
-	[  --with-admin=EMAIL      set admin's email address [guessed]],
-	[admin=${withval}], [admin=$webmaster]
+    admin,
+    [  --with-admin=EMAIL      set admin's email address [guessed]],
+    [admin=${withval}], [admin=$webmaster]
 )
 AC_MSG_RESULT($admin)
 OPT_ADMIN_EMAIL=$admin
@@ -411,6 +178,225 @@ AC_MSG_RESULT($scoring)
 OPT_SCORING=$scoring
 AC_SUBST(OPT_SCORING)
 
+dnl *
+dnl * Set a directory to install perl modules
+dnl *
+ADDITIONAL_INC="."  # default (dummy)
+AC_ARG_WITH(
+    pmdir,
+    [  --with-pmdir=DIR        perl modules are in DIR [guessed]],
+    [PMDIR=${withval}], [PMDIR='']
+)
+test "$PMDIR" && ADDITIONAL_INC="$PMDIR"
+AC_SUBST(ADDITIONAL_INC)
+
+dnl *
+dnl * Checks for external commands
+dnl *
+AC_ARG_WITH(
+    perl5,
+    [  --with-perl5=PATH       set perl 5.004 or later location [search path]],
+    AC_MSG_RESULT(using $with_perl5 for perl5)
+    PERL=$with_perl5,
+    [AC_PATH_PROGS(PERL, perl5 perl, no)]
+)
+if test $PERL = "no" || $PERL -e 'exit ($] >= 5.004)'; then
+    AC_MSG_ERROR(perl 5.004 or later required)
+fi
+
+AC_ARG_WITH(
+    nkf,
+    [  --with-nkf=PATH         set nkf command location [search path]],
+    NKF=$with_nkf
+    AC_MSG_RESULT(using $with_nkf for nkf),
+    if test -z "$NKF"; then
+    AC_MSG_CHECKING(for NKF module)
+        if $PERL -MNKF -e '' 1>/dev/null 2> /dev/null; then
+            NKF=module_nkf
+            AC_MSG_RESULT(yes)
+        else
+            AC_MSG_RESULT(no)
+            [AC_PATH_PROG(NKF,nkf, no)] 
+        fi
+    fi
+)
+if test "$NKF" = "no"; then
+    AC_MSG_WARN(NKF (network kanji filter) not found)
+fi
+
+AC_ARG_WITH(
+    kakasi,
+    [  --with-kakasi=PATH      set kakasi command location [search path]],
+    KAKASI=$with_kakasi
+    AC_MSG_RESULT(using $with_kakasi for kakasi),
+    if test -z "$KAKASI"; then
+        AC_MSG_CHECKING(for Text::Kakasi module)
+        if $PERL -MText::Kakasi -e '' 1>/dev/null 2> /dev/null; then
+            KAKASI=module_kakasi
+            AC_MSG_RESULT(yes)
+        else
+            AC_MSG_RESULT(no)
+            [AC_PATH_PROG(KAKASI,kakasi, no)] 
+        fi
+    fi
+)
+
+AC_ARG_WITH(
+    chasen,
+    [  --with-chasen=PATH      set chasen command location [search path]],
+    CHASEN=$with_chasen
+    AC_MSG_RESULT(using $with_chasen for chasen),
+    if test -z "$CHASEN"; then
+	AC_MSG_CHECKING(for Text::ChaSen1 module)
+	if $PERL -MText::ChaSen1 -e '' 1>/dev/null 2> /dev/null; then
+	    CHASEN=module_chasen1
+	    AC_MSG_RESULT(yes)
+	else
+	    AC_MSG_RESULT(no)
+	    [AC_PATH_PROG(CHASEN,chasen, no)] 
+	fi
+    fi
+)
+
+if test "$KAKASI" = "no" -a "$CHASEN" = "no"; then
+    AC_MSG_WARN(KAKASI or ChaSen are required to handle Japanese)
+fi
+
+AC_MSG_CHECKING(for default wakatigaki processor)
+OPT_WAKATI_DEFAULT=
+if test "$KAKASI" != "no"; then
+    OPT_WAKATI_DEFAULT=KAKASI
+elif test "$CHASEN" != "no"; then
+    OPT_WAKATI_DEFAULT=CHASEN
+fi
+AC_MSG_RESULT($OPT_WAKATI_DEFAULT)
+AC_SUBST(OPT_WAKATI_DEFAULT)
+
+
+dnl *
+dnl * Preprocessing for tknamazu
+dnl *
+
+dnl * For determining namazu and mknmz pathnames
+ac_cv_path_NAMAZU="$bindir/namazu"
+ac_cv_path_MKNMZ="$bindir/mknmz"
+
+if test "${tknamazu}" = "no"; then
+    TKNAMAZU=""
+else
+    AC_ARG_WITH(
+        wish,
+        [  --with-wish=PATH        set wish location [search path]],
+        AC_MSG_RESULT(using $with_wish for wish)
+        WISH = $with_wish,
+        dnl checking for wish (ugly)
+        [AC_PATH_PROGS(WISH, wish8.0jp wish4.2jp wish8.2 wish8.1 wish, no)]
+    )
+    if test "$WISH" = "no"; then
+        AC_MSG_WARN(wish not found: tknamazu will not be built)
+        TKNAMAZU=""
+    else
+        AC_ARG_WITH(
+	    lynx,
+	    [  --with-lynx=PATH        set lynx browser location [search path]],
+	    AC_MSG_RESULT(using $with_lynx for lynx)
+	    LYNX = $with_lynx,
+	    [AC_PATH_PROG(LYNX, lynx, no)]
+        )
+        if test "$LYNX" = "no"; then
+            AC_MSG_WARN(lynx not found: tknamazu will not be built)
+            TKNAMAZU=""
+        else
+            TKNAMAZU="tknamazu"
+            AC_ARG_WITH(
+		groff,
+		[  --with-groff=PATH       set groff location [search path]],
+		AC_MSG_RESULT(using $with_groff for groff)
+		GROFF = $with_groff,
+		[AC_PATH_PROGS(GROFF, jgroff groff nroff, no)]
+            )
+            if test "$GROFF" = "no"; then
+                AC_MSG_WARN(groff not found: tknamazu cannot browse man pages)
+            fi
+            AC_ARG_WITH(
+                info,
+                [  --with-info=PATH        set info location [search path]],
+                AC_MSG_RESULT(using $with_info for info)
+                INFO = $with_info,
+                [AC_PATH_PROG(INFO, info, no)]
+            )
+            if test "$INFO" = "no"; then
+                AC_MSG_WARN(info not found: tknamazu cannot browse info files)
+            fi
+            AC_ARG_WITH(
+                zcat,
+                [  --with-zcat=PATH        set zcat location [search path]],
+                AC_MSG_RESULT(using $with_zcat for zcat)
+                ZCAT = $with_zcat,
+                [AC_PATH_PROG(ZCAT, zcat, no)]
+            )
+            if test "$ZCAT" = "no"; then
+                AC_MSG_WARN(zcat not found)
+            fi
+            AC_ARG_WITH(
+                netscape,
+                [  --with-netscape=PATH    set netscape location [search path]],
+                AC_MSG_RESULT(using $with_netscape for netscape)
+                NETSCAPE = $with_netscape,
+                [AC_PATH_PROG(NETSCAPE, netscape, no)]
+            )
+            if test "$NETSCAPE" = "no"; then
+            AC_MSG_WARN(netscape not found)
+            fi
+        fi
+    fi
+fi
+AC_SUBST(TKNAMAZU)
+AC_CONFIG_SUBDIRS($TKNAMAZU)
+
+
+dnl *
+dnl * Preprocessing for File::MMagic
+dnl *
+if test "${file_mmagic}" = "no"; then
+    FILE_MMAGIC=""
+else
+    changequote(<<, >>)
+    tmp=`$PERL -nle 'print \$1 if /^\\$VERSION = \"([\d\.]+)\";\$/' \
+    	File-MMagic/MMagic.pm`
+    # tmp="10.0"  # for testing
+    AC_MSG_CHECKING(for File::MMagic module)
+
+    FILE_MMAGIC=""
+    if $PERL -e "use lib '$PMDIR'; use File::MMagic $tmp" \
+    1>/dev/null 2> /dev/null; then
+        AC_MSG_RESULT(yes)
+    else
+        AC_MSG_RESULT(no)
+        AC_MSG_WARN(File::MMagic module not installed. preparing its Makefile.)
+        cd File-MMagic
+        if test -z "$PMDIR"; then
+            $PERL Makefile.PL
+        else
+            $PERL Makefile.PL LIB=$PMDIR
+        fi
+
+	# To prevent to remove Makefile when doing 'make clean'
+	grep -v '^	-mv Makefile Makefile\.old \$(DEV_NULL)' \
+	Makefile > Makefile.tmp
+	mv Makefile.tmp Makefile
+
+        cd ..
+        FILE_MMAGIC="File-MMagic"
+    fi
+    changequote([, ])
+fi
+AC_SUBST(FILE_MMAGIC)
+
+dnl *
+dnl * Check for Emacs and where to install .elc files.
+dnl *
+AM_PATH_LISPDIR
 
 dnl *
 dnl * set default $prefix and $sysconfdir at this time for next processing
@@ -428,7 +414,6 @@ AC_DEFINE_UNQUOTED(OPT_CONFDIR,  "${sysconfdir}/${PACKAGE}")
 dnl *
 dnl * Set default behavior
 dnl * 
-AC_DEFINE_UNQUOTED(OPT_LANGUAGE, "$OPT_LANGUAGE")
 AC_DEFINE_UNQUOTED(OPT_SCORING, $OPT_SCORING)
 AC_DEFINE(MSIE4MACFIX)
 
