--- a/src/mknmz.pl.in
+++ b/src/mknmz.pl.in
@@ -1,7 +1,7 @@
 #! @PERL@ -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.pl.in,v 1.70 1999-11-01 14:13:19 satoru Exp $
+# $Id: mknmz.pl.in,v 1.71 1999-11-03 05:12:14 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi  All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -37,11 +37,12 @@ use Getopt::Long;
 use vars qw($SYSTEM);
 $SYSTEM = $^O;
 
+my $LANG = "C";                # language of messages
 my $CCS = "euc";
-my $CONFDIR  = "%CONFDIR%";      # directory where mknmzrc are in.
+my $CONFDIR  = "%CONFDIR%";    # directory where mknmzrc are in.
 my $LIBDIR  = "%LIBDIR%";      # directory where library etc. are in.
 my $FILTERDIR  = "%FILTERDIR%";      # directory where filters are in.
-my $TEMPLATEDIR  = "%TEMPLATEDIR%";      # directory where templates are in.
+my $TEMPLATEDIR  = "%TEMPLATEDIR%";  # directory where templates are in.
 
 my $DeletedFilesCount = 0;
 my $UpdatedFilesCount = 0;
@@ -189,6 +190,15 @@ sub init () {
     } else {
 	$CCS = "euc";
     }
+
+    # set LANG
+    for my $cand (("LC_ALL", "LC_MESSAGES", "LANG")) {
+	if (defined($ENV{$cand})) {
+	    $LANG = $ENV{$cand};
+	    last;
+	}
+    }
+    # print "LANG: $LANG\n";
 
     $SIG{'INT'}  = sub {
 	util::cdie("SIGINT caught! Aborted.\n");
@@ -603,17 +613,17 @@ sub save_flist(@) {
 }
 
 sub require_modules() {
-    if ($conf::LANGUAGE eq "ja" && $conf::NKF =~ /^module_nkf/) {
+    if (util::islang("ja") && $conf::NKF =~ /^module_nkf/) {
 	require NKF;
         util::dprint("code conversion: using NKF module\n");
 	$var::USE_NKF_MODULE = 1;
     }
-    if ($conf::LANGUAGE eq "ja" && $conf::WAKATI =~ /^module_kakasi/) {
+    if (util::islang("ja") && $conf::WAKATI =~ /^module_kakasi/) {
 	require Text::Kakasi;
         util::dprint("wakati: using Text::Kakasi module\n");
 	my $res = Text::Kakasi::getopt_argv('kakasi', '-ieuc', '-oeuc', '-w');
     }
-    if ($conf::LANGUAGE eq "ja" && $conf::WAKATI =~ /^module_chasen1/) {
+    if (util::islang("ja") && $conf::WAKATI =~ /^module_chasen1/) {
 	require Text::ChaSen1;
         util::dprint("wakati: using Text::ChaSen1 module\n");
 	my @arg = ('-j', '-F', '%m ');
@@ -740,7 +750,7 @@ sub parse_options ()
 	       'H|no-hiragana'       => \$var::Opt{'hiragana'},
 	       'I|include=s'         => \$include_file,
 	       'K|no-symbol'         => \$var::Opt{'nosymbol'},
-	       'L|lang=s'            => \$conf::LANGUAGE,
+	       'L|lang=s'            => \$LANG,
 	       'M|meta'              => \$var::Opt{'meta'},
 	       'O|output-dir=s'      => \$output_dir,
 	       'S|checkpoint-sub'    => \$opt_checkpoint_sub,
@@ -889,7 +899,7 @@ sub show_config () {
     print "KAKASI: $conf::KAKASI\n" if $conf::KAKASI;
     print "ChaSen: $conf::CHASEN\n" if $conf::CHASEN;
     print "Wakati: $conf::WAKATI\n" if $conf::WAKATI;
-    print "Lang:   $conf::LANGUAGE\n";
+    print "Lang:   $LANG\n";
     print "CCS:    $CCS\n";
     print "CONFDIR:     $CONFDIR\n";
     print "LIBDIR:      $LIBDIR\n";
@@ -959,8 +969,8 @@ sub find_target (@) {
 
 
 sub show_long_usage () {
-    util::dprint("lang: $conf::LANGUAGE\n");
-    if ($conf::LANGUAGE eq "ja") {
+    util::dprint("lang: $LANG\n");
+    if (util::islang("ja")) {
 	if ($CCS eq "euc") {
 	    print $usage::USAGE_JA;
 	} elsif ($CCS eq "sjis") {
@@ -1063,7 +1073,7 @@ sub write_message ($) {
 	if (-f $template) {
 	    my $buf = util::readfile($template);
 	    my $fh_output;
-	    if ($conf::LANGUAGE eq "ja" && !$var::USE_NKF_MODULE) {
+	    if (util::islang("ja") && !$var::USE_NKF_MODULE) {
 		$fh_output = util::efopen("|$conf::NKF -j >$msgfile");
 	    } else {
 		$fh_output = util::efopen(">$msgfile");
@@ -1500,7 +1510,7 @@ sub make_headfoot ($$$) {
 
     # the file must be saved in ISO-2022-JP encoding.
     my $fh_file;
-    if ($conf::LANGUAGE eq "ja" && !$var::USE_NKF_MODULE) {
+    if (util::islang("ja") && !$var::USE_NKF_MODULE) {
 	$fh_file = util::efopen("|$conf::NKF -j >$file");
     } else {
 	$fh_file = util::efopen(">$file");
@@ -1645,7 +1655,7 @@ sub count_words ($$$$) {
     $$contref =~ tr/A-Z/a-z/;
 
     # Do wakatigaki if necessary.
-    if ($conf::LANGUAGE eq "ja") {
+    if (util::islang("ja")) {
 	wakati::wakatize_japanese($contref) if $kanji;
     }
 
